<resources>
    <string name="app_name">Food Delivery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_categories">Categories</string>
    <string name="key_bundle">key_titulo</string>
    <string name="nombre">Nombre</string>
    <string name="des">Descripcion</string>
    <string name="q10_34">Q10.34</string>
    <string name="recomendados">Recomendados</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="cart">Cart</string>
    <string name="msg_algo_salio_mal">Algo salio mal, Intente mas tarde</string>
    <string name="msg_add_order_successful">El pedido a sido agregado con exito!</string>
    <string name="send_order">Enviar Pedidos</string>
    <string name="lblcantidad">Cantidad: %1$s</string>
    <string name="lblprecio">Precio: Q%1$s</string>
    <string name="lblamount">Q%1$s</string>
    <string name="_1">1</string>
    <string name="cantidad">Cantidad</string>
    <string name="no_hay_pedidos">No hay pedidos</string>
</resources>