<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mcSpace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imgCategoria"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/des"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/heart" />
        <!--         app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                     -->

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCategoria"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/nombre"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCategoria" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCategoria"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:text="@string/des"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCategoria"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/q10_34"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>