<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detail_movie_cover"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:scaleType="centerCrop"
            android:src="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tvAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_rawRes="@raw/heart" />

        <ImageView
            android:id="@+id/detail_movie_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/des"
            android:transitionName="sharedName"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintEnd_toEndOf="@+id/detail_movie_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_cover" />


        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:text="@string/q10_34"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

        <TextView
            android:id="@+id/tvDescripcionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:text="@string/descripcion"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAmount" />


        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/descripcion"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcionTitle" />


        <TextView
            android:id="@+id/tvRecomendados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="15dp"
            android:text="@string/recomendados"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewFoods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRecomendados" />


        <com.google.android.material.button.MaterialButton
           android:id="@+id/btnAddOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/agregar_al_carrito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerviewFoods" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>